@@ -1,3 +1,14 @@
+Thu Dec 29 01:38:17 1994  Richard Basch  <probe@k9>
+
+	* krlogind.c:
+	More error checking for Solaris tty setup routines (grantpt/unlockpt)
+	Commented out the OOB code, as it causes problems currently.
+	Cleaned up some of the #ifdef's for logging incoming users
+	Removed extraneous declaration of malloc()
+	Pass a "" for the hostname rather than NULL to update_utmp.
+	Some additional cosmetic changes.
+	Included/excluded #ifdef SYSV code (SYSV is not defined anywhere)
+
 Wed Dec 28 14:59:58 1994  Richard Basch  (probe@tardis)
 
 	* krlogin.c
